# Checkers_Engine

./: .clang-format  .gitignore
Client/include/: analysicsform.h  controls.h  engineform.h  form.h  pvpform.h  startform.h
Client/src/: analysicsform.cpp  controls.cpp  engineform.cpp  form.cpp  pvpform.cpp  startform.cpp
Engine/: CMakeLists.txt  conanfile.py
Engine/include/: Engine.h  GameControllers.h  controls.h  engine.h  forms.h  game.h  gamecontroller.h  moves.h  types.h
Engine/src/: Engine.cpp  controls.cpp  engine.cpp  forms.cpp  game.cpp  gamecontroller.cpp  main.cpp  moves.cpp
Engine/test/: CMakeLists.txt  main.cpp
Engine/test/src/: engine_tests.cpp
Engine/utils/: CMakeLists.txt
Engine/utils/include/: ThreadPool.h  ThreadPoolManager.h
Engine/utils/src/: ThreadPool.cpp  ThreadPoolManager.cpp
Server/: CMakeLists.txt  conanfile.py
